Correct v1.9.0 release notes

--- a/src/content/docs/release-notes/v1.9.0.md
+++ b/src/content/docs/release-notes/v1.9.0.md
@@ -1,6 +1,6 @@
 ---
-title: v1.8.0
-description: External Data Sources
+title: v1.9.0
+description: Improved undo and redo
 ---
 
 *Release date: 02.10.2024*
@@ -16,19 +16,20 @@ description: External Data Sources
 - Add tooltips "add new image", "add new image sequence"
 - Remove second dialog about unsaved changes
 - Object and animation title can not be empty
-
-#### Correct undo/redo
-
-#### Assets UI
-
-- Show used space of workspace
-
-### Features
-
 - New type of data source - txt
 - Display workspace of graphics file or asset to which it belongs on card
 - Change "save" text for "create" in graphics file detail dialog
 - Change texts "Tweenly by Stream Circle" to "Tweenly by PROVYS Technologies"
 - Show loading button when saving graphics file
 - If graphics file cannot be published because it is not "finished", inform the user
+- Show used space of workspace
+
+#### Correct undo/redo
+
+#### Assets UI
+
+
+
+
+
 
